# streetCatViewer

./: pyproject.toml  streetcatviewer.main.spec
.github/workflows/: packageToExecutable.yml
streetcatviewer/: __init__.py  build.spec  database.py  main.py  requirements.txt
