[tool.poetry]
name = "streetcatviewer"
version = "0.1.1"
description = "A python tool for viewing Hello Street Cat cameras"
authors = ["aguywhosaguy <aguywhosaguy@aguywhosaguy.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/aguywhosaguy/streetCatViewer"
keywords = [
    "Cats",
    "Tkinter"
]

[tool.poetry.dependencies]
python = "^3.12,<3.13"
opencv-python = "^4.9.0.80"
requests = "^2.31.0"
pyinstaller = "^6.3.0"

[tool.poetry.scripts]
generateJSON = "streetcatviewer.database:cam_gen"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
